--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "baumwelch" %}
-{% set version = "0.3.1" %}
+{% set version = "0.3.2" %}
 
 package: 
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: http://www.opengrm.org/twiki/pub/GRM/BaumWelchDownload/{{ name }}-{{ version }}.tar.gz
-  sha256: 6895127c6ecbc0a40215dfb8d6bbf29e9ea5d7fbd274397ef048dac2c65ee91f
+  sha256: bb82a764834dfe2f6fbd76fea0cbfef12b6be091a8295212108014ca3a14ff11
   
 build:
   number: 0
@@ -18,14 +18,15 @@ requirements:
     - {{ compiler('cxx') }}
     - make
   host:
-    - openfst ==1.7.6
+    - openfst ==1.7.7
   run:
-    - openfst ==1.7.6
+    - openfst ==1.7.7
 
 test:
   commands:
-    - baumwelchtrain --helpshort || [[ $? == 1 ]]
     - baumwelchdecode --helpshort || [[ $? == 1 ]]
+    - baumwelchrandomize --helpshort || [[ $? == 1 ]]
+    - baumwelchtrain --helpshort || [[ $? == 1 ]]
 
 about:
   home: http://bauwmelch.opengrm.org
