Trying it a different way.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
-    - {{ stdlib('c') }}
+    - {{ compiler("cxx") }}
     - make                    # [unix]
     - gnuconfig               # [unix]
     - cmake                   # [win]
